--- a/package.json
+++ b/package.json
@@ -6,5 +6,42 @@
   "repository": "https://github.com/HarvestProfit/harvest-profit-ui",
   "author": "Jaryd Krishnan",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "build": "babel src -d dist",
+    "test": "jest test/ --coverage"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/!(index).{js,jsx}"
+    ],
+    "setupTestFrameworkScriptFile": "./setupTests.test.js",
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
+  },
+  "dependencies": {
+    "lodash.isfinite": "^3.3.2",
+    "lodash.tonumber": "^4.0.3",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "7",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-airbnb": "^2.4.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.2",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "jest": "^21.2.1",
+    "jest-enzyme": "^4.0.1",
+    "react-dom": "^16.0.0"
+  }
 }
