--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "build": "babel src -d dist",
     "report-coverage": "coveralls < ./coverage/lcov.info",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build",
     "test": "jest test/ --coverage"
   },
   "jest": {
@@ -44,6 +46,10 @@
     "eslint-plugin-react": "^7.4.0",
     "jest": "^21.2.1",
     "jest-enzyme": "^4.0.1",
-    "react-dom": "^16.0.0"
+    "postcss-smart-import": "^0.7.5",
+    "react-dom": "^16.0.0",
+    "react-styleguidist": "^6.0.31",
+    "webpack": "^3.8.1",
+    "webpack-blocks": "^1.0.0-rc"
   }
 }
