Add tests for Saving component

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "src/**/!(index).{js,jsx}"
     ],
     "setupTestFrameworkScriptFile": "./setupTests.test.js",
+    "timers": "fake",
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
     }
