--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "lodash.isfinite": "^3.3.2",
     "lodash.tonumber": "^4.0.3",
     "prop-types": "^15.6.0",
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "react-transition-group": "^2.2.1",
+    "reactstrap": "^4.8.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
