--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6",
     "babel-eslint": "7",
     "babel-polyfill": "^6.26.0",
     "babel-preset-airbnb": "^2.4.0",
