--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
   directories:
   - node_modules
 script:
-  - yarn run test
+  - yarn run test-coverage
   - yarn run build
 after_script:
   - yarn run report-coverage
