--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6",
     "babel-eslint": "7",
+    "babel-jest": "^22.4.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-airbnb": "^2.4.0",
     "babel-preset-react": "^6.24.1",
