--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "harvest-profit-ui",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Harvest Profit UI Components",
   "main": "dist/index.js",
   "repository": "https://github.com/HarvestProfit/harvest-profit-ui",
@@ -52,7 +52,7 @@
     "react-dom": "^0.14.9 || ^15.3.0 || ^16.0.0"
   },
   "dependencies": {
-    "bootstrap": "4.0.0-beta",
+    "bootstrap": "^4.1.2",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.5",
     "lodash.isfinite": "^3.3.2",
