--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "collectCoverageFrom": [
       "src/**/!(index).{js,jsx}"
     ],
-    "setupTestFrameworkScriptFile": "./setupTests.js",
+    "setupFilesAfterEnv": ["./setupTests.js"],
     "timers": "fake",
     "transform": {
       "^.+\\.jsx?$": "babel-jest",
@@ -76,14 +76,14 @@
     "babel-jest": "^24.8.0",
     "babel-preset-airbnb": "^4.0.1",
     "coveralls": "^3.0.0",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.2",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "jest": "^21.2.1",
+    "jest": "^24.8.0",
     "jest-enzyme": "^4.0.1",
     "postcss-smart-import": "^0.7.5",
     "react-dom": "^16.8.6",
