--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "harvest-profit-ui",
-  "version": "1.2.2",
+  "version": "2.0.0",
   "description": "Harvest Profit UI Components",
   "main": "dist/index.js",
   "repository": "https://github.com/HarvestProfit/harvest-profit-ui",
@@ -48,21 +48,21 @@
     "ui"
   ],
   "peerDependencies": {
-    "react": "^0.14.9 || ^15.3.0 || ^16.0.0",
-    "react-dom": "^0.14.9 || ^15.3.0 || ^16.0.0"
+    "react": "^0.14.9 || ^15.3.0 || ^16.0.0 || ^17.0.0",
+    "react-dom": "^0.14.9 || ^15.3.0 || ^16.0.0 || ^17.0.0"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.21",
     "lodash.isfinite": "^3.3.2",
     "lodash.snakecase": "^4.1.1",
     "lodash.tonumber": "^4.0.3",
-    "prop-types": "^15.6.0",
-    "react": "^16.13.1",
-    "react-sortable-hoc": "^0.6.8",
-    "react-transition-group": "^2.2.1",
-    "reactstrap": "^8.0.0"
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-sortable-hoc": "^1.11.0",
+    "react-transition-group": "^2.9.0",
+    "reactstrap": "^8.9.0"
   },
   "devDependencies": {
     "@babel/cli": "^7",
@@ -77,7 +77,7 @@
     "babel-preset-airbnb": "^4.0.1",
     "coveralls": "^3.0.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "eslint": "^4.12.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.7.0",
@@ -86,7 +86,7 @@
     "jest": "^24.8.0",
     "jest-enzyme": "^4.0.1",
     "postcss-smart-import": "^0.7.5",
-    "react-dom": "^16.8.6",
+    "react-dom": "^17.0.2",
     "react-styleguidist": "^9.0.0",
     "webpack": "^4.0.0",
     "webpack-blocks": "^2.0.0"
